--- a/css/gameStyle.css
+++ b/css/gameStyle.css
@@ -1,21 +1,32 @@
 h1 {
   font-family: 'Limelight', cursive;
   font-size: 40px;
-  text-align: center;
   width:500px;
   margin: 0 auto;
   background: gray;
+  text-align: center;
+  margin-bottom: 15px;
 }
 h2 {
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   width:500px;
   margin: 0 auto;
   background: rgb(155, 120, 120);
   text-align: center;
+  margin-bottom: 30px;
 }
-
-label {
-  margin-left: 100px;
+P {
+  margin-left: 140px;
+  margin-bottom: 30px;
+}
+legend {
+  border: solid blue 3px;
+  margin: 0 auto;
+  margin-bottom: 10px;
+}
+label{
+  display: block;
+  margin: top 30px; 
+  margin-left: 240px;
 }
 /* F O O T E R */
 footer {
