--- a/css/aboutUsStyle.css
+++ b/css/aboutUsStyle.css
@@ -13,6 +13,7 @@ h2 {
   background: rgb(155, 120, 120);
   text-align: center;
 }
+
 /* B O D Y  */
 #marie{
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -26,6 +27,18 @@ h2 {
 #aloysious{
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+
+
+/* PAGE SPLIT */
+
+#bio-top {
+  display: block;
+}
+
+#bio-bottom {
+  display: block;
+}
+
 /* F O O T E R  */
 footer {
   text-align: center;
