--- a/css/leaderBoardStyle.css
+++ b/css/leaderBoardStyle.css
@@ -1,21 +1,34 @@
+body {
+  background: url(/img/toilet-paper.png) no-repeat center center fixed;
+  background-size: 65%;
+  background-color: rgb(41, 41, 41);
+}
 h1 {
   font-family: 'Limelight', cursive;
   font-size: 40px;
-  width:500px;
+  height: 60px;
+  /* width:500px; */
   margin: 0 auto;
+  padding-top: 20px;
   background: gray;
   text-align: center;
   margin-bottom: 15px;
-  margin-top: 10px;
 }
 h2 {
-  width:500px;
+  /* width:500px; */
+  font-size: 20px;
   margin: 0 auto;
+  height: 30px;
+  padding-top: 10px;
   background: rgb(155, 120, 120);
   text-align: center;
   margin-bottom: 30px;
 }
 /* L E A D E R B O A R D    T A B L E  */
+#leaderBoard {
+  margin-top: 370px;
+  margin-left: 52%;
+}
 table, td {
   color: rgb(15, 6, 6);
   background-color: rgb(180, 173, 173);
@@ -88,14 +101,16 @@ th, tfoot {
   }
  }
  /* F O O T E R */
-footer {
+ footer {
+  position: absolute;
+  bottom: 0;
   text-align: center;
   background: gray;
   height: 30px;
-  margin-bottom: 0%;
+  margin-bottom: 0;
   padding-top: 10px;
   margin: auto;
   color: rgb(0, 0, 0);
   font-size: 16px;
-  width:500px;
+  width: 100%;
 }
