--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,27 @@
+body {
+  background: url(/img/wall-paper.png) repeat center center fixed;
+  background-size: 40%;
+}
 h1 {
   font-family: 'Limelight', cursive;
   font-size: 40px;
-  text-align: center;
-  width:500px;
+  height: 60px;
+  /* width:500px; */
   margin: 0 auto;
+  padding-top: 20px;
   background: gray;
+  text-align: center;
+  margin-bottom: 15px;
 }
 h2 {
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  width:500px;
+  /* width:500px; */
+  font-size: 20px;
   margin: 0 auto;
+  height: 30px;
+  padding-top: 10px;
   background: rgb(155, 120, 120);
   text-align: center;
+  margin-bottom: 30px;
 }
 
 label {
@@ -19,13 +29,15 @@ label {
 }
 /* F O O T E R */
 footer {
+  position: absolute;
+  bottom: 0;
   text-align: center;
   background: gray;
   height: 30px;
-  margin-bottom: 0%;
+  margin-bottom: 0;
   padding-top: 10px;
   margin: auto;
   color: rgb(0, 0, 0);
   font-size: 16px;
-  width:500px;
+  width: 100%;
 }
