--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,28 @@
-body {
-  background: url(/img/wall-paper.png) repeat center center fixed;
+/* body {
+  background: url(/img/tprolls.png) repeat center center fixed;
   background-size: 40%;
+} */
+#background-overlay {
+  position: absolute;
+  height:100%;
+  width: 150%;
+  background-color:rgba(0, 0, 0, 0.2);
+  z-index: -1
+}
+#myVideo {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  width: 100%; 
+  height: 100%;
+  z-index: -2;
+}
+#background-underlay {
+  position: absolute;
+  height:100%;
+  width: 100%;
+  background-color: black;
+  z-index: -3
 }
 h1 {
   font-family: 'Limelight', cursive;
@@ -23,7 +45,15 @@ h2 {
   text-align: center;
   margin-bottom: 30px;
 }
-
+p {
+  max-width: max-content;
+  margin: auto;
+}
+form {
+  max-width: max-content;
+  border: 1px solid red;
+  margin: auto;
+}
 label {
   margin-left: 100px;
 }
