formatting css and html files

--- a/css/gameStyle.css
+++ b/css/gameStyle.css
@@ -2,6 +2,7 @@ body {
   background-color: rgb(41, 41, 41);
 
 }
+/*.......................................T w e n t y 2 0  . T r i v i a (h1) */
 h1 {
   font-family: 'Limelight', cursive;
   font-size: 50px;
