--- a/css/aboutUsStyle.css
+++ b/css/aboutUsStyle.css
@@ -1,11 +1,13 @@
+/*.......................................T w e n t y 2 0  . T r i v i a (h1) */
 h1 {
   font-family: 'Limelight', cursive;
-  font-size: 40px;
+  font-size: 50px;
   text-align: center;
   width:500px;
   margin: 0 auto;
   background: gray;
 }
+/*...............................................A B O U T . U S  (h2) */
 h2 {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   width:500px;
@@ -14,7 +16,9 @@ h2 {
   text-align: center;
 }
 
-/* B O D Y  */
+/*.....................................................B O D Y  */
+
+
 #marie{
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
@@ -29,17 +33,14 @@ h2 {
 }
 
 
-/* PAGE SPLIT */
-
-#bio-top {
-  display: block;
+article {
+  display: inline-block;
 }
 
-#bio-bottom {
-  display: block;
-}
 
-/* F O O T E R  */
+/* .................................................PAGE SPLIT */
+
+/*.................................................F O O T E R  */
 footer {
   text-align: center;
   background: gray;
