--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@
   background: url(/img/tprolls.png) repeat center center fixed;
   background-size: 40%;
 } */
+
+/*............................................... M A S K S . U P MP4 */
 #background-overlay {
   position: absolute;
   height:100%;
@@ -24,20 +26,20 @@
   background-color: black;
   z-index: -3
 }
+/*.......................................T w e n t y 2 0  . T r i v i a (h1) */
 h1 {
   font-family: 'Limelight', cursive;
-  font-size: 40px;
+  font-size: 50px;
   height: 60px;
-  /* width:500px; */
   margin: 0 auto;
   padding-top: 20px;
   background: gray;
   text-align: center;
-  margin-bottom: 15px;
+  margin-bottom: 10px;
 }
+/*................................................N U L L till needed (h2) */
 h2 {
-  /* width:500px; */
-  font-size: 20px;
+  font-size: 30px;
   margin: 0 auto;
   height: 30px;
   padding-top: 10px;
@@ -48,16 +50,39 @@ h2 {
 p {
   max-width: max-content;
   margin: auto;
+  font-size: 28px;
+  margin-left: 280px;
+  margin-bottom: 20px;
 }
+/* ................................................F O R M . S T U F F */
 form {
   max-width: max-content;
-  border: 1px solid red;
+  /* border: 1px solid red; */
   margin: auto;
+  text-align: left;
+  font-size: 20px;
+}
+input {
+  border-radius: 60px;
+  text-align: center;
 }
 label {
-  margin-left: 100px;
+  margin-left: 20px;
+  text-align: left
 }
-/* F O O T E R */
+button {
+  border-radius: 60px;
+}
+ /*.............................................N A V I G A T I O N . L I N K S */
+ li {
+  display: inline-block;
+  margin-top: 90px;
+  font-weight: bold;
+  font-size: 22px;
+ margin-left: 140px;
+ margin-top: 300px;
+}
+/*.....................................................F O O T E R */
 footer {
   position: absolute;
   bottom: 0;
@@ -70,4 +95,5 @@ footer {
   color: rgb(0, 0, 0);
   font-size: 16px;
   width: 100%;
+  font-weight: bold;
 }
