--- a/css/gameStyle.css
+++ b/css/gameStyle.css
@@ -2,31 +2,36 @@ body {
   background-color: rgb(41, 41, 41);
 
 }
-/*.......................................T w e n t y 2 0  . T r i v i a (h1) */
+/*.............................................T w e n t y 2 0  . T r i v i a (h1) */
 h1 {
   font-family: 'Limelight', cursive;
   font-size: 50px;
   height: 60px;
-  /* width:500px; */
+  width: 100%;
   margin: 0 auto;
   padding-top: 20px;
   background: gray;
   text-align: center;
   margin-bottom: 15px;
 }
+/*..................................................L e t s  . P l a y (h2) */
 h2 {
-  /* width:500px; */
-  font-size: 20px;
+  font-family: 'Limelight', cursive;
+  width:260px;
+  font-size: 30px;
   margin: 0 auto;
   height: 30px;
-  padding-top: 10px;
-  background: rgb(155, 120, 120);
+  padding-top: 5px;
+  background: rgb(155, 120, 120);  
   text-align: center;
-  margin-bottom: 30px;
+  border: dashed 3px rgb(218, 199, 199);
+  border-radius: 60px;
 }
+/*....................................................G A M E . C A R D */
 #questionImage{
   display: block;
-  border: 5px solid rgb(0, 0, 0);
+  border: 3px solid rgb(0, 0, 0);
+  box-shadow: 2px 3px 3px 4px rgb(0, 0, 0);
   border-radius: 10px 10px 0 0;
   margin: auto;
   height: 350px;
@@ -43,15 +48,17 @@ h2 {
 }
 #question {
   width: max-content;
-  margin: 60px auto 60px;
-  font-size: 24px;
+  margin: 20px auto 20px;
+  font-size: 32px;
+  font-family: 'Gochi Hand', cursive;
+  color: antiquewhite;
 }
 legend {
   margin: 0 auto;
   margin-bottom: 10px;
 }
 input {
-  margin-left: 50px;
+  margin-left: 150px;
 }
 label {
   display: block;
@@ -78,17 +85,17 @@ button {
   width: 110px;
   margin: 40px auto 10px;
 }
-/* F O O T E R */
+
+/*...................................................F O O T E R */
 footer {
-  position: absolute;
   bottom: 0;
   text-align: center;
   background: gray;
   height: 30px;
   margin-bottom: 0;
   padding-top: 10px;
-  margin: auto;
   color: rgb(0, 0, 0);
   font-size: 16px;
   width: 100%;
+  font-weight: ;
 }
