--- a/css/gameStyle.css
+++ b/css/gameStyle.css
@@ -1,6 +1,18 @@
-body {
+#background-overlay {
+  position: absolute;
+  height:100%;
+  width: 150%;
+  background: url(/img/wallpapers.png) repeat center center fixed;
+  background-size: 35%;
+  opacity: .05;
+  z-index: -1
+}
+#background-underlay {
+  position: absolute;
+  height:100%;
+  width: 100%;
   background-color: rgb(41, 41, 41);
-
+  z-index: -2
 }
 /*.............................................T w e n t y 2 0  . T r i v i a (h1) */
 h1 {
@@ -53,16 +65,13 @@ h2 {
   font-family: 'Gochi Hand', cursive;
   color: antiquewhite;
 }
-legend {
-  margin: 0 auto;
-  margin-bottom: 10px;
-}
 input {
   margin-left: 150px;
 }
 label {
   display: block;
-  margin: top 30px; 
+  padding-bottom: 10px;
+  margin-top: -20px;
   margin-left: 240px;
   font-size: 20px;
 }
@@ -85,17 +94,48 @@ button {
   width: 110px;
   margin: 40px auto 10px;
 }
+ nav {
+   margin-top: 300px;
+ }
+ #nav {
+  background: rgb(155, 120, 120);
+  font-family: Limelight, cursive;
+  display: inline-block;
+  text-align: center;
+  width: 100%;
+  /* position: absolute;
+  bottom: 10; */
+  margin-bottom: 5%;
+  padding-top: 1%;
+  padding-bottom: 1%;
+}
 
+li {
+  display: inline-block;
+  font-weight: bold;
+  font-size: 22px;
+ padding-left: 150px;
+ padding-right: 150px;
+ }
+
+ a {
+  color: rgb(0, 62, 78)
+ }
+ a:hover {
+  color: white;
+ }
 /*...................................................F O O T E R */
 footer {
+  position: absolute;
   bottom: 0;
   text-align: center;
   background: gray;
   height: 30px;
   margin-bottom: 0;
   padding-top: 10px;
+  margin: auto;
   color: rgb(0, 0, 0);
   font-size: 16px;
   width: 100%;
-  font-weight: ;
+  font-weight: bold;
 }
