--- a/css/gameStyle.css
+++ b/css/gameStyle.css
@@ -94,17 +94,26 @@ button {
   width: 110px;
   margin: 40px auto 10px;
 }
- nav {
-   margin-top: 300px;
- }
+#results {
+  color: white;
+  font-size: 2em;
+  max-width: max-content;
+  margin: auto;
+  margin-top: 120px;
+  line-height: 200%;
+  text-align: center;
+}
+#results a {
+  color: gold;
+}
  #nav {
-  background: rgb(155, 120, 120);
+  background: gray;
   font-family: Limelight, cursive;
   display: inline-block;
   text-align: center;
   width: 100%;
-  /* position: absolute;
-  bottom: 10; */
+  position: fixed;
+  bottom: 0;
   margin-bottom: 5%;
   padding-top: 1%;
   padding-bottom: 1%;
@@ -124,18 +133,20 @@ li {
  a:hover {
   color: white;
  }
-/*...................................................F O O T E R */
-footer {
-  position: absolute;
+
+ /*......................................................F O O T E R */
+ footer {
+  position: fixed;
   bottom: 0;
   text-align: center;
-  background: gray;
-  height: 30px;
-  margin-bottom: 0;
-  padding-top: 10px;
-  margin: auto;
+  vertical-align: top;
+  height: 2.5rem;
+  /* margin-bottom: 5px;
+  margin-top: 10px;
+  padding-top: 5px; */
+  /* margin: auto; */
   color: rgb(0, 0, 0);
-  font-size: 16px;
+  font-size: 20px;
   width: 100%;
   font-weight: bold;
 }
