--- a/css/aboutUsStyle.css
+++ b/css/aboutUsStyle.css
@@ -9,7 +9,7 @@ body {
   position: absolute;
   height:100%;
   width: 150%;
-  background: url(/img/wallpapers.png) repeat center center fixed;
+  background: url(img/wallpapers.png) repeat center center fixed;
   background-size: 35%;
   opacity: .07;
   z-index: -1
