--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
   position: absolute;
   height:100%;
   width: 150%;
-  background: url(/img/wallpapers.png) repeat center center fixed;
+  background: url(img/wallpapers.png) repeat center center fixed;
   background-size: 35%;
   opacity: .05;
   z-index: -2;
