--- a/css/leaderBoardStyle.css
+++ b/css/leaderBoardStyle.css
@@ -11,7 +11,7 @@ body {
   position: absolute;
   height:100%;
   width: 150%;
-  background: url(img/wallpapers.png) repeat center center fixed;
+  background: url("../img/wallpapers.png") repeat center center fixed;
   background-size: 35%;
   opacity: .07;
   z-index: -1
@@ -61,7 +61,7 @@ h2 {
 
 /* container that HOLDS the leaderboard table*/
 #leaderBoardBox {
-  background-image: url(img/toilet-paper.png);
+  background-image: url("../img/toilet-paper.png");
   background-repeat: no-repeat;
   background-size: 100%;
   /* position: relative; */
@@ -171,8 +171,8 @@ th, tfoot {
   display: inline-block;
   text-align: center;
   width: 100%;
-  /* position: absolute;
-  bottom: 10; */
+  position: fixed;
+  bottom: 0;
   margin-bottom: 5%;
   padding-top: 1%;
   padding-bottom: 1%;
