--- a/css/aboutUsStyle.css
+++ b/css/aboutUsStyle.css
@@ -122,15 +122,13 @@ padding: 20px;
 
 
 /* NAV BAR */
-#nav {
+.nav {
   background: gray;
   font-family: Limelight, cursive;
   display: inline-block;
   text-align: center;
   width: 100%;
-  position: fixed;
-  bottom: 0;
-  margin-bottom: 5%;
+  margin-bottom: 10%;
   padding-top: 1%;
   padding-bottom: 1%;
 }
@@ -152,7 +150,7 @@ li {
 
  /*......................................................F O O T E R */
  footer {
-  position: fixed;
+  position: absolute;
   bottom: 0;
   text-align: center;
   vertical-align: top;
