--- a/css/gameStyle.css
+++ b/css/gameStyle.css
@@ -1,7 +1,7 @@
 #background-overlay {
   position: absolute;
-  height:100%;
-  width: 150%;
+  height:150%;
+  width: 100%;
   background: url("../img/wallpapers.png") repeat center center fixed;
   background-size: 35%;
   opacity: .05;
@@ -9,7 +9,7 @@
 }
 #background-underlay {
   position: absolute;
-  height:100%;
+  height:150%;
   width: 100%;
   background-color: rgb(41, 41, 41);
   z-index: -2
@@ -92,7 +92,7 @@ button {
   font-size: 20px;
   height: 35px;
   width: 110px;
-  margin: 40px auto 10px;
+  margin: 10px auto 10px;
 }
 #results {
   color: white;
@@ -106,23 +106,21 @@ button {
 #results a {
   color: gold;
 }
- #nav {
+.nav {
   background: gray;
   font-family: Limelight, cursive;
   display: inline-block;
   text-align: center;
   width: 100%;
-  position: fixed;
-  bottom: 0;
-  margin-bottom: 5%;
+  margin-bottom: 3%;
   padding-top: 1%;
   padding-bottom: 1%;
 }
 
 li {
-  display: inline-block;
-  font-weight: bold;
-  font-size: 22px;
+ display: inline-block;
+ font-weight: bold;
+ font-size: 22px;
  padding-left: 150px;
  padding-right: 150px;
  }
@@ -136,15 +134,10 @@ li {
 
  /*......................................................F O O T E R */
  footer {
-  position: fixed;
   bottom: 0;
   text-align: center;
   vertical-align: top;
-  height: 2.5rem;
-  /* margin-bottom: 5px;
-  margin-top: 10px;
-  padding-top: 5px; */
-  /* margin: auto; */
+  /* height: 2.5rem; */
   color: rgb(0, 0, 0);
   font-size: 20px;
   width: 100%;
